jupyter: add local machine analysis

--- a/jupyter/dphpc_analysis.ipynb
+++ b/jupyter/dphpc_analysis.ipynb
@@ -673,6 +673,28 @@
     "# show legend\n",
     "ax2.legend(fontsize=20)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time elapsed: 6.0384139999999995 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq_cycles = 3019207\n",
+    "all_core_cycles = 16749\n",
+    "cycles_per_second = 500000000\n",
+    "seq_time = seq_cycles / cycles_per_second\n",
+    "all_core_time = all_core_cycles / cycles_per_second\n",
+    "print(f'Sequential Time elapsed: {seq_time * 1000} ms')"
+   ]
   }
  ],
  "metadata": {
