Updated jupyter and ython script

--- a/jupyter/argmax_process.ipynb
+++ b/jupyter/argmax_process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -36,7 +36,10 @@
     "        else:\n",
     "            return False  # Other type (?)\n",
     "    except NameError:\n",
-    "        return False      # Probably standard Python interpreter\n"
+    "        return False      # Probably standard Python interpreter\n",
+    "\n",
+    "# Add the lock informations in the results.csv files\n",
+    "!python ../onnx_benchmark/analyze_locks.py VERBOSE=0"
    ]
   },
   {
@@ -46,16 +49,7 @@
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing files at ../hardware/results\n",
-      "410/427    cores=  2    data=     64b    max_gen=   3239    max=   3238    len=      5"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Processing files at\", result_path)\n",
     "\n",
@@ -74,6 +68,7 @@
     "    max_val = -1\n",
     "    seed = -1\n",
     "    to_find = {\"lobal max\":[], \"ndexes len\":[]}\n",
+    "    stop = False\n",
     "            \n",
     "    for filename in filenames:\n",
     "        if filename != \"transcript\":\n",
@@ -100,30 +95,45 @@
     "\n",
     "        # Read CSV\n",
     "        done += 1\n",
-    "        df = pd.read_csv(dirpath+\"/results.csv\", index_col=0)\n",
+    "        df = pd.read_csv(dirpath+\"/results.csv\")\n",
     "        df[\"num_cores\"] = int(num_cores)\n",
     "        df[\"num_data\"] = int(num_data)\n",
     "        df[\"num_local_data\"] = int(num_local_data)\n",
     "        df[\"max_val\"] = int(max_val)\n",
     "        df[\"seed\"] = int(seed)\n",
+    "        # Delete column without name\n",
+    "        df = df.reset_index(drop=True)\n",
+    "        for col in df.columns:\n",
+    "            if 'Unnamed' in col:\n",
+    "                df = df.drop(col, 1)\n",
     "        # Print state\n",
     "        print(\"\\r{}/{}\".format(done, todo) + \"    cores={0:3d}\".format(int(num_cores))+\"    data={0:7d}b\".format(int(num_data))\\\n",
     "              +\"    max_gen={0:7d}\".format(int(max_val))+\"    max={0:7d}\".format(int(to_find['lobal max'][0]))+\"    len={0:7d}\".format(int(to_find['ndexes len'][0])), end=\"\")\n",
     "        # Concat everyone\n",
     "        configs.append([num_cores, num_data, num_local_data])\n",
     "        tot_df = pd.concat([tot_df, df], axis=0, join=\"outer\", ignore_index=False, keys=None, levels=None, names=None, verify_integrity=False, copy=True)\n",
+    "        if(tot_df['cs_retry'].isnull().any()):\n",
+    "            print(\"\\r\"+dirpath+\"/\"+filename+\" uncorrect cs_retry, rerun analyze_locks\")\n",
+    "        if(tot_df['core'].isnull().any()):\n",
+    "            print(\"\\r\"+dirpath+\"/\"+filename+\" uncorrect core\")\n",
+    "        \n",
+    "\n",
     "print(\"\")\n",
+    "raw_df = tot_df.copy()\n",
+    "\n",
     "# Drop nans\n",
     "to_drop = tot_df.columns[tot_df.isnull().any()]\n",
+    "printf(\"Dropping :\")\n",
     "for nan_col in to_drop:\n",
     "    assert(not nan_col in ['cycles', 'num_data', 'num_cores'])\n",
     "    tot_df = tot_df.drop(nan_col, axis=1)\n",
+    "    print(nan_col, end=\" \")\n",
     "\n",
     "# Drop strings\n",
     "tot_df = tot_df.select_dtypes(exclude=['object'])\n",
     "\n",
     "tot_df.to_csv(csv_path)\n",
-    "print(\"Results exported to\", csv_path)"
+    "print(\"\\nResults exported to\", csv_path)"
    ]
   },
   {
@@ -291,7 +301,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -397,11 +408,27 @@
    },
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "di = {0:{\"core\": 0, \"section\":1}}\n",
-    "print(di)\n",
-    "df = pd.DataFrame.from_dict(di, orient='index')\n",
-    "print(df)"
+    "grouped = raw_df.groupby([\"num_cores\", \"num_data\", \"section\"]).agg({'cs_retry': 'sum', 'cs_duration': 'sum'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "num_cores = 256\n",
+    "num_data = 200\n",
+    "section = 1\n",
+    "\n",
+    "for num_data in [8, 32, 64, 200]:\n",
+    "    plt.figure()\n",
+    "    str = grouped.loc[num_cores,num_data,section]['cs_retry'].replace('][',',').replace('[', '').replace(']', '').replace(' ','')\n",
+    "    distrib = [int(x) for x in str.split(',') if x != '']\n",
+    "    plt.hist(distrib, bins=30, density=True)\n",
+    "print(\"Done\")"
    ]
   },
   {
